Fix mini-selector z-index over map

--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ html, body, section {height: 100vh;}
 .site-level-view .carousel.is-fullscreen .carousel-cell {height: 100%;}
 
 /* Map side */
-.site-level-view .selector.map {position: absolute; bottom: 0; right: 0; float: right; margin: 25px 60px; padding: 0 25px; background-color: #515151; border-radius: 30px; box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);}
+.site-level-view .selector.map {position: absolute; bottom: 0; right: 0; float: right; margin: 25px 60px; padding: 0 25px; background-color: #515151; border-radius: 30px; box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75); z-index: 10;}
 .site-level-view .selector.map ul li {display: inline-block; border-radius: 2px; width: 60px; height: 52px; vertical-align: top; text-align: center; margin: 0 1px; padding: 8px 0; font-size: 10px; transition: .3s}
 .site-level-view .selector.map ul li:hover {background-color: grey;}
 .site-level-view .selector.map ul li.active {background-color: orange;}
